# VulcanoCraft-plugin-repository

./: .dockerignore  .env.7z  .env.example  .gitignore  ADMIN_CHANGES.md  ADMIN_ROLES.md  Dockerfile  README.md  create_admin.py  cron.py  database.py  docker-compose.yml  index.html  launcher.py  loaders.json  package-lock.json  package.json  plugins.json  pyproject.toml  requirements.txt  script.js  server_categories.json  server_info.json  style.css  temp_test_plugin_loaders.py  test_changes.py  test_rename_regression.py  update.md  verify_frontend.py  verify_loader_filter.py  webserver.py
components/admin/: admin.html
components/user/: change_password.html  login.html
css/: change_password.css  login.css
fetchers/: author.py  cursetest.py  description.py  icon.py  loaders.py  modrinth.py  plugin_loaders.py  titles.py  utils.py  versions.py
js/: admin.js  change_password.js  login.js
js/app/: admin.js  animations.js  api-admin.js  api-auth.js  api.js  auth.js  change-password.js  filters.js  login.js  main.js  modals.js  ui.js
